; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_calendarspec.c_matches_weekday.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_calendarspec.c_matches_weekday.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }

@BITS_WEEKDAYS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.tm*, i32)* @matches_weekday to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @matches_weekday(i32 %0, %struct.tm* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.tm*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.tm, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store %struct.tm* %1, %struct.tm** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %5, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %16, label %12

12:                                               ; preds = %3
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @BITS_WEEKDAYS, align 4
  %15 = icmp sge i32 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %12, %3
  store i32 1, i32* %4, align 4
  br label %40

17:                                               ; preds = %12
  %18 = load %struct.tm*, %struct.tm** %6, align 8
  %19 = bitcast %struct.tm* %8 to i8*
  %20 = bitcast %struct.tm* %18 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %19, i8* align 4 %20, i64 4, i1 false)
  %21 = load i32, i32* %7, align 4
  %22 = call i64 @mktime_or_timegm(%struct.tm* %8, i32 %21)
  %23 = icmp slt i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %17
  store i32 0, i32* %4, align 4
  br label %40

25:                                               ; preds = %17
  %26 = getelementptr inbounds %struct.tm, %struct.tm* %8, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = icmp eq i32 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %25
  br label %34

30:                                               ; preds = %25
  %31 = getelementptr inbounds %struct.tm, %struct.tm* %8, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = sub nsw i32 %32, 1
  br label %34

34:                                               ; preds = %30, %29
  %35 = phi i32 [ 6, %29 ], [ %33, %30 ]
  store i32 %35, i32* %9, align 4
  %36 = load i32, i32* %5, align 4
  %37 = load i32, i32* %9, align 4
  %38 = shl i32 1, %37
  %39 = and i32 %36, %38
  store i32 %39, i32* %4, align 4
  br label %40

40:                                               ; preds = %34, %24, %16
  %41 = load i32, i32* %4, align 4
  ret i32 %41
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @mktime_or_timegm(%struct.tm*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
